@@ -1,3 +1,8 @@
+2003-06-19  Borut Razem <borut.razem@siol.net>
+
+	* src/SDCCutil.h, src/SDCCutil.c, src/SDCCglobl.h, src/SDCCmain.c, src/z80/main.c:
+	fixed Z80 port - crt0.o: cannot open.
+
 2003-06-19  Bernhard Held <bernhard@bernhardheld.de>
 
 	* support/Util/MySystem.c (merge_command): revert bad fix
